# tda-py

./: .env.sample  .gitignore  .gitignore.bak  .replit  Makefile  README.md  pyproject.toml  replit.nix
app/: main.py
app/api/: risk.py  shelters.py  tiles.py
app/core/: config.py
app/models/: responses.py
app/services/: risk_engine.py  shelter_service.py  tiler.py
config/: weights.json
data/mock/: buildings.geojson  grid_500m.geojson  hazard_liq.geojson
scripts/: build_tiles.py  compute_risk.py  serve_pmtiles.py
tests/: test_health.py  test_risk_engine.py  test_risk_score.py
web/: index.html  manifest.json  sw.js
